--- a/components/DancePage/DancePage.module.css
+++ b/components/DancePage/DancePage.module.css
@@ -1,6 +1,9 @@
 .body-el {
   --body-padding: 2rem;
   padding-top: 1em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .body-el .header {
@@ -11,23 +14,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* flex-wrap: wrap; */
-  /* This accounts for the paisley svg which is positioned absolute */
-  margin-bottom: 2em;
 }
 .body-el .header .subtitle {
   white-space: nowrap;
   margin-left: 0.3em;
 }
-
-.body-el .header [class*="PaisleySwish_body-el"] {
-  transform: rotate(90deg) scaley(-1.3);
-  position: absolute;
-  top: -1.8em;
-  --paisley-fill: #b7c2eb;
-  width: 8em;
-  z-index: -1;
-  max-width: 100vw;
+.body-el .my-swish {
+  --paisley-fill: var(--my-sky-blue);
+  /* I'm stretch it so it's a bit more of a horizontal divider and takes less vertical room */
+  --stretch: 1.3;
+  --margin: 1em;
+  margin: 0 var(--margin);
+  width: 25em;
+  max-width: calc((100vw - var(--margin)) / var(--stretch));
+  transform: scaleX(var(--stretch));
 }
 .body-el .page-body {
   padding: 0.5em var(--body-padding) 0;
@@ -60,12 +60,11 @@
   .body-el {
     --body-padding: 0.5rem;
   }
+  .body-el .my-swish {
+    width: 18em;
+  }
   .body-el .header {
     flex-direction: column;
-  }
-  .body-el .header [class*="PaisleySwish_body-el"] {
-    top: -0.8em;
-    transform: rotate(90deg) scaley(-1);
   }
   .body-el .header .subtitle {
     font-size: 3rem;
