--- a/components/WorkSamples/WorkSamples.module.css
+++ b/components/WorkSamples/WorkSamples.module.css
@@ -7,7 +7,7 @@
 
 .WorkSamples h1 {
   font-size: 2.5rem;
-  margin: 1em 1em 0.5em;
+  margin: 1em 0em 0.5em;
   text-align: center;
 }
 .WorkSamples p {
@@ -16,6 +16,7 @@
   max-width: 60em;
 }
 
+/* For github link */
 .WorkSamples a {
   text-decoration: none;
   color: #ddd;
@@ -34,6 +35,7 @@
   left: 0;
 }
 
+/* For the sample links (big buttons) */
 .WorkSamples .sample-links {
   display: flex;
   justify-content: space-around;
@@ -43,26 +45,30 @@
 }
 
 .WorkSamples .sample-links a {
+  --side-padding: 0.8em;
   display: block;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 0.5em 0.8em;
+  padding: 0.5em var(--side-padding);
 }
+.WorkSamples .sample-links a h2 {
+  position: relative;
+  margin: 0.1em auto;
+}
+
 .WorkSamples .link-content {
   font-size: 1rem;
-  min-width: 30vw;
-  max-width: 20em;
-  text-align: center;
+  width: 20em;
+  max-width: calc(100vw - calc(2 * var(--side-padding)));
+  /* min-width: 30vw;
+  max-width: 20em; */
 }
 
 .WorkSamples .sample-links a:hover {
   background-color: #555;
   border-radius: 0.3em;
 }
-.WorkSamples .sample-links a:hover h2 {
-  position: relative;
-}
+
 .WorkSamples .sample-links a:hover h2::after {
   content: "";
   position: absolute;
