--- a/components/DancePage/EventsList/DanceEventComp/DanceEventComp.module.css
+++ b/components/DancePage/EventsList/DanceEventComp/DanceEventComp.module.css
@@ -10,7 +10,8 @@ to behave slighly differently when you click on them both inside and outside the
   display: flex;
   flex-direction: column;
   border-radius: 0.3em;
-  background-color: #404245;
+  --body-color: var(--bg-brighter);
+  background-color: var(--body-color);
 }
 
 /* When the element is open, I want the sapce saver to take up the same horizontal size as the original component */
@@ -29,7 +30,11 @@ to behave slighly differently when you click on them both inside and outside the
 
 .body:hover,
 .hidden:focus + .body {
-  background-color: #505255;
+  background-color: hsl(
+    var(--bg-hue),
+    var(--bg-sat),
+    calc(var(--bg-light) + calc(18% * var(--cs)))
+  );
 }
 
 .list h2 {
@@ -52,7 +57,7 @@ to behave slighly differently when you click on them both inside and outside the
 }
 .event-body .link,
 .event-body .links {
-  color: #fff;
+  color: var(--default-text);
   text-decoration: none;
 }
 .event-body .link:hover,
@@ -91,7 +96,7 @@ to behave slighly differently when you click on them both inside and outside the
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #000a;
+  background-color: var(--light-box-color);
   height: 100vh;
   width: 100vw;
   z-index: 100;
@@ -124,17 +129,17 @@ to behave slighly differently when you click on them both inside and outside the
   position: absolute;
   top: 0.3em;
   right: 0.3em;
-  background-color: #0000;
-  border: 2px solid #999;
+  background-color: var(--transparent);
+  border: 2px solid var(--mid-grey);
   border-radius: 3em;
   height: 1.8em;
   width: 1.8em;
-  color: #fff;
+  color: var(--default-text);
 }
 
 /* I want to disable the hover stuff when the event is focused */
 .DanceEventBG.open .body:hover {
-  background-color: #404245;
+  background-color: var(--body-color);
 }
 .hidden {
   all: unset;
