--- a/components/Satisfactory/QuantShower/QuantShower.module.css
+++ b/components/Satisfactory/QuantShower/QuantShower.module.css
@@ -3,7 +3,7 @@
 }
 
 .QuantShower .row.main {
-  border: 1px solid #aaa;
+  border: 1px solid var(--mid-grey);
   border-radius: 0.3em;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .QuantShower:focus-within .row.main {
-  background-color: #555;
+  background-color: var(--bg-brighter);
 }
 
 .QuantShower:focus-within .details {
@@ -44,10 +44,10 @@
 
 .QuantShower input {
   all: unset;
-  background: #fff0;
+  background: var(--transparent);
   margin: 0 0.5em;
   font-style: inherit;
-  color: #fff;
-  border-bottom: 1px solid #aaa;
+  color: var(--default-text);
+  border-bottom: 1px solid var(--mid-grey);
   width: 3em;
 }
