--- a/components/StaffingSample/ExplainOverlay/ExplainOverlay.module.css
+++ b/components/StaffingSample/ExplainOverlay/ExplainOverlay.module.css
@@ -9,7 +9,10 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  background-color: #21252baa;
+  /* THe modified BG makes more sense here because I'm moving the content around
+  and I'm bringing stuff back and forth over this bg layer */
+  background-color: hsl(var(--bg-hue), var(--bg-sat), var(--bg-light), 0.5);
+  /* var(--light-box-color); */
   z-index: 102;
   box-sizing: border-box;
 }
@@ -35,7 +38,7 @@
   border-radius: 0.8em;
   padding: 1em;
   /* padding-right: 2.5em; */
-  border: 1px solid #aaa;
+  border: 1px solid var(--mid-grey);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,8 +56,8 @@
   border: none;
   padding: 0.5em 1em;
   font-family: var(--my-general-font);
-  background-color: #555;
-  color: #fff;
+  background-color: var(--bg-brighter-2);
+  color: var(--default-text);
   font-size: 1rem;
   border-radius: 0.4em;
   white-space: nowrap;
