--- a/components/StaffingSample/RecruitsHead/RecruitsHead.module.css
+++ b/components/StaffingSample/RecruitsHead/RecruitsHead.module.css
@@ -31,13 +31,13 @@
   align-items: center;
   justify-content: center;
   flex: 1;
-  background-color: #fff0;
+  background-color: var(--transparent);
   border: none;
 }
 
 .RecruitsHead .group .button-body {
   color: inherit;
-  background-color: #888;
+  background-color: var(--bg-brighter-3);
   --button-size: 2em;
   width: var(--button-size);
   height: var(--button-size);
@@ -56,22 +56,19 @@
   margin-right: 0em;
 }
 .RecruitsHead .group .group-name {
-  /* border-radius: 0.2em; */
   padding: 0.1em 0.8em;
-  /* border: 1px solid #fff0; */
+  margin: 0;
 }
 .RecruitsHead .group:focus-within {
   outline: none;
 }
 .RecruitsHead .group:focus-within .group-name {
-  /* text-decoration: underline; */
-  /* border: 1px solid #fff; */
   border-bottom: 1px solid var(--my-yellow);
 }
 
 .RecruitsHead .sort {
   height: 100%;
-  background-color: #8880;
+  background-color: var(--transparent);
   display: flex;
   align-items: center;
   font-size: 1.1em;
@@ -86,7 +83,6 @@
   all: unset;
   text-align: center;
   flex: 1;
-  /* background-color: #666; */
   height: 100%;
   display: flex;
   align-items: center;
@@ -99,7 +95,7 @@
   content: "";
   display: block;
   position: absolute;
-  background-color: #fff;
+  background-color: var(--default-text);
   height: 1px;
   width: 3.1em;
   top: 2em;
@@ -112,7 +108,7 @@
 }
 
 .RecruitsHead .sort.explain-recruits-sort {
-  background-color: #888;
+  background-color: var(--bg-brighter-2);
   border: 2px solid var(--my-yellow);
   box-sizing: border-box;
 }
@@ -123,6 +119,6 @@
   }
 
   .RecruitsHead .sort select {
-    background-color: #0000;
+    background-color: var(--transparent);
   }
 }
