--- a/components/StaffingSample/StaffingSample.module.css
+++ b/components/StaffingSample/StaffingSample.module.css
@@ -2,17 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #fff;
+  color: var(--default-text);
   height: 100vh;
   position: relative;
 
   /* Things I want to mess around with and I don't want to look for every time */
-  --header-bg: #41454b;
+  --header-bg: var(--bg-brighter);
   --header-height: 3.2em;
 }
 
 .StaffingSample [class$="Icon"] {
-  fill: #ddd;
+  fill: var(--light-grey);
   height: 1.8em;
   width: 1.8em;
 }
@@ -43,12 +43,12 @@
   border-radius: 2em;
 }
 .StaffingSample .help-button [class*="HelpIcon"] {
-  fill: #ddd;
+  fill: var(--light-grey);
   height: 100%;
   width: 100%;
 }
 .StaffingSample .help-button:focus {
-  background-color: #555;
+  background-color: var(--bg-brighter);
 }
 
 .body {
