--- a/components/VirtualWhiteboard/InviteOverlay/InviteOverlay.module.css
+++ b/components/VirtualWhiteboard/InviteOverlay/InviteOverlay.module.css
@@ -4,7 +4,7 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: #21252baa;
+  background-color: var(--light-box-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,7 +20,7 @@
   border-radius: 0.8em;
   padding: 1em;
   /* padding-right: 2.5em; */
-  border: 1px solid #aaa;
+  border: 1px solid var(--mid-grey);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,7 +28,7 @@
 }
 
 .close [class*="CloseIcon"] {
-  fill: #fff;
+  fill: var(--default-text);
   height: 100%;
   width: 100%;
 }
@@ -42,7 +42,7 @@ button.close {
   position: absolute;
   top: 0em;
   right: 0em;
-  border: 1px solid #fff;
+  border: 1px solid var(--default-text);
   padding: 0.2em;
   border-radius: 2em;
   height: 1.5em;
@@ -51,13 +51,13 @@ button.close {
 
 button.send {
   background-color: var(--my-sky-blue);
-  color: #000;
+  color: var(--opposite-text);
   margin: 0 0 0 1em;
   padding: 0.3em 0.8em;
 }
 
 .invite {
-  --err-color: #d55;
+  --err-color: var(--err-color);
   margin: 0.5em;
   display: flex;
   justify-content: space-between;
@@ -70,8 +70,8 @@ button.send {
 
 .invite input {
   all: unset;
-  background-color: #444;
-  border-bottom: 1px solid #aaa;
+  background-color: var(--bg-brighter);
+  border-bottom: 1px solid var(--mid-grey);
   padding: 0.3em;
   border-radius: 0.3em 0.3em 0 0;
 }
