--- a/components/Satisfactory/QuantShower/QuantShower.module.css
+++ b/components/Satisfactory/QuantShower/QuantShower.module.css
@@ -44,6 +44,7 @@
 
 .QuantShower input {
   all: unset;
+  cursor: pointer;
   background: var(--transparent);
   margin: 0 0.5em;
   font-style: inherit;
