--- a/components/WorkSamples/WorkSamples.module.css
+++ b/components/WorkSamples/WorkSamples.module.css
@@ -10,7 +10,7 @@
   margin: 1em 0em 0.5em;
   text-align: center;
 }
-.WorkSamples p {
+.WorkSamples > p {
   font-size: 16px;
   margin: 0.5em 1em;
   max-width: 60em;
@@ -38,22 +38,29 @@
 /* For the sample links (big buttons) */
 .WorkSamples .sample-links {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   width: 100%;
+  padding: 1em;
   flex: 1;
   align-items: center;
 }
 
 .WorkSamples .sample-links a {
   --side-padding: 0.8em;
+  width: 100%;
   display: block;
   display: flex;
   flex-direction: column;
   padding: 0.5em var(--side-padding);
+  border: 2px solid var(--my-green);
+  border-radius: 0.5em;
+  margin: 1.5em 0;
 }
 .WorkSamples .sample-links a h2 {
   position: relative;
-  margin: 0.1em auto;
+  margin: 0 0 0.5em;
+  width: min-content;
+  white-space: nowrap;
 }
 
 .WorkSamples .link-content {
@@ -62,11 +69,6 @@
   max-width: calc(100vw - calc(2 * var(--side-padding)));
   /* min-width: 30vw;
   max-width: 20em; */
-}
-
-.WorkSamples .sample-links a:hover {
-  background-color: var(--bg-brighter-2);
-  border-radius: 0.3em;
 }
 
 .WorkSamples .sample-links a:hover h2::after {
