--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,9 +4,9 @@
   overflow-y: scroll;
   box-sizing: border-box;
   overflow-x: hidden;
-  scroll-snap-type: y mandatory;
+  /* scroll-snap-type: y mandatory; */
 }
 .App section {
-  height: 100vh;
+  min-height: 100vh;
   scroll-snap-align: start;
 }
