--- a/styles/globals.css
+++ b/styles/globals.css
@@ -143,6 +143,7 @@ body {
   font-weight: normal;
   font-family: var(--my-header-font);
   color: var(--my-yellow);
+  min-height: 1em;
 }
 
 code {
